--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Clean Blog - Start Bootstrap Theme</title>
+    <title>Artificial Intelligence</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,137 +28,54 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+        <a class="navbar-brand" href="index.html">Apex Friendship High School TSA</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
+          Navigation
           <i class="fa fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="post.html">Sample Post</a>
+              <a class="nav-link" href="cte_tech.html">CTE and TECH</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="chapter.html">TSA Chapter</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="AI.html">Artifcial Intelligence</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/about-bg.jpg')">
+<header class="masthead" style="background-image: url('img/project working.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="page-heading">
-              <h1>About Me</h1>
-              <span class="subheading">This is what I do.</span>
+            <div class="site-heading">
+              <h1>About</h1>
+              <h2 class="subheading">Brief description of how we made this project</h2>
             </div>
           </div>
         </div>
       </div>
     </header>
 
-    <!-- Main Content -->
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
            <br>
+This page was made using a bootstrap framework from startbootstrap.com.
 <br>
-			<img src="img/afhs.png" width="50" height="50"
-				 <br>
-			<br>
-			<br>
-<font color ="red">From our CTE page:</font> 
+All the content on this website is unique, and all the linked sites either belong to bootstrap, AFHS, or TSA.
 <br>
-<br>
-<font color ="black">Career & Technical Education</font>
-<br>
-		  <br>
-"Today's economy demands a better educated workforce more than ever before.  Career and Technical Education (CTE) is an elective program and an integral part of Apex Friendship High School.  CTE provides students with the academic rigor, technical knowledge, employability skills, and real-world experiences needed to pursue postsecondary training and higher education for high-skill, high-demand, and highly successful careers.
-
-CTE brings education and business together so that students gain real world understanding of their skills and are equipped for career success. Nearly all CTE educators report working with business and industry leaders in their programs in a range of capacities, from advisory panels to classroom visits to offering internships and job shadowing opportunities to students. The business community helps validate the CTE curriculum and donates supplies and equipment. This relationship helps educators ground their curriculums in the real needs of real businesses, leading students to obtain skills that will be highly valuable in the job market."
-
-<br>
-<br>
-
-<font color="black">ACADEMY OF ENGINEERING</font>
-
-The academy of engineering is a program inside of our school that helps engineering minded students on their path to greatness in any engineering field of their choosing. Mrs. Cadavid (head AOE director) has built up a strong foundation for the students to learn what they need without the bulk of too many extra classes. This group of students also gets opportunities to go on educational field trips, job shadow, and learn from the best in our state.
-
-This program includes specialized classes in their student's schedule
-
-<br>
-			<img src="img/aoe.jpg"
-<br>
-
-<font color="black">MICROSOFT CLUSTER CLASSES</font>
-
-The classes that are based off of microsoft products in our school are "Word & Powerpoint" and "Excel & Access", which both come in the honors variety if the student is up for the challenge. These classes are great for setting you up for success in college and the business world. These are some of the only classes that have a structured learning purpose based on the student's needs, and molds the curriculum to the newer version of the microsoft products.
-
-<br>
-<br>
-
-<font color="black">ADOBE, DATABASE, CODING AND SCI VIS CLASSES</font>
-
-Our school offers a variety of computer software classes that includes but are not limited to these softwares: Adobe Illustrator, Adobe Photoshop, Adobe InDesign, AutoDesk Inventor, AutoDesk 3DS MAX, Microsoft VisualStudio, and various products from SAS.
-		  </div>
-      </div>
+We used a bootstrap frameworked navbar and page linking.
     </div>
-
-    <hr>
-
-    <!-- Footer -->
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
-            <ul class="list-inline text-center">
-              <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-            </ul>
-            <p class="copyright text-muted">Copyright &copy; Apex Friendship TSA 2018</p>
-          </div>
-        </div>
-      </div>
-    </footer>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="js/clean-blog.min.js"></script>
 
   </body>
 
