more content on the pages

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Artificial Intelligence</title>
+    <title>About</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -70,11 +70,20 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
            <br>
-This page was made using a bootstrap framework from startbootstrap.com.
+This page was made using a bootstrap framework from <a href="https://startbootstrap.com">startbootstrap.com.</a>
+<br>
+<hr>
 <br>
 All the content on this website is unique, and all the linked sites either belong to bootstrap, AFHS, or TSA.
 <br>
+<hr>
+<br>
 We used a bootstrap frameworked navbar and page linking.
+<br>
+<hr>
+<br>
+All bootstrap components and stylings are stored in bootstrap created content
+<br>
     </div>
 
   </body>
