--- a/AI.html
+++ b/AI.html
@@ -69,7 +69,32 @@
 
     <hr>
 
-    <!-- Footer -->
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+           <br>
+<center><a href="https;//http://www.tsaweb.org/sites/default/files/2018%20High%20School%20Webmaster%20Design%20Brief.pdf"><p>DESIGN BRIEF</p></a>
+<hr>
+<br>
+<p> Welcome to the AFHS AI Company homepage, we have successfully created one of the first, and most advanced robots that can adhere to your actions and soon become a friend. This robot, Jason, has a complex learning algorithm, paired with many different functional parts to replicate human action.<p>
+<br>
+<br>
+<p> Jason has subclasses of robots too, if the price is too much or the actions are out of needed range. Check out our spending plan and pricing guide for all the versions of Jason, you can choose between a full down payment, 15 month, 30 month or 60 month spending plan. (SHOWN BELOW)</center>
+<br>
+<br>
+<hr>
+<br>
+<br>
+<div class="scrollmenu">
+  <a href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+  ...
+</div>
+</div>
+</div>
+</div>
     <footer>
             <p class="copyright text-muted">Copyright &copy; Apex Friendship TSA</p>
           </div>
@@ -86,7 +111,7 @@
     <script src="js/contact_me.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/clean-blog.min.js"></script>
+    <script src="js/bootstrapframe.js"></script>
 
   </body>
 
