--- a/cte_tech.html
+++ b/cte_tech.html
@@ -77,7 +77,7 @@
 				 <br>
 			<br>
 			<br>
-<font color ="red">From our CTE page:</font> 
+<a href="https://www.wcpss.net/domain/3967"><font color ="red">From our CTE page:</font></a>
 <br>
 <br>
 <font color ="black">Career & Technical Education</font>
@@ -142,7 +142,7 @@ Our school offers a variety of computer software classes that includes but are n
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/clean-blog.min.js"></script>
+    <script src="js/bootstrapframe.js"></script>
 
   </body>
 
