--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/clean-blog.min.js"></script>
+    <script src="js/bootstrapframe.js"></script>
 
   </body>
 
