--- a/AI.html
+++ b/AI.html
@@ -85,17 +85,17 @@
 <hr>
 <br>
 <br>
-<div class="scrollmenu">
-  <a href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
-  ...
-</div>
 </div>
 </div>
 </div>
     <footer>
+   <center> <div class="container">
+  <a href="#">JASON</a>
+  <br>
+  <a href="#">JASON SUB IVX</a>
+  <br>
+  <a href="#">JASON SUB NVEX</a>
+</div></center>
             <p class="copyright text-muted">Copyright &copy; Apex Friendship TSA</p>
           </div>
         </div>
