all content in AI page

--- a/AI.html
+++ b/AI.html
@@ -90,11 +90,7 @@
 </div>
     <footer>
    <center> <div class="container">
-  <a href="#">JASON</a>
-  <br>
-  <a href="#">JASON SUB IVX</a>
-  <br>
-  <a href="#">JASON SUB NVEX</a>
+  <a href="jason.html">JASON (IVX and NIVX)</a>
 </div></center>
             <p class="copyright text-muted">Copyright &copy; Apex Friendship TSA</p>
           </div>
