--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
            <br>
-This page was made using a bootstrap framework from <a href="https://startbootstrap.com">startbootstrap.com.</a>
+<center>This page was made using a bootstrap framework from <a href="https://startbootstrap.com">startbootstrap.com.</a>
 <br>
 <hr>
 <br>
@@ -84,7 +84,29 @@ We used a bootstrap frameworked navbar and page linking.
 <br>
 All bootstrap components and stylings are stored in bootstrap created content
 <br>
+<br>
+<center><img src="img/bootstrap.png" width="130px"><center>
+<br>
+<center>COMMUNITY SERVICE/VOLUNTEER SERVICE:<center>
+
+<br>
+<br>
+Our TSA team helped volunteer for various different events and organizations, as well as them participating in such events. The AFHS TSA team got the opportunity to help run a local middle school robotic competition earlier this year. Two memebers of the team also participated in the Kramden community service program where they built and tested computers for less priviledged children.
     </div>
+    </center>
+    </center>
+    </div>
+    </civ>
+      <footer>
+            <p class="copyright text-muted">Copyright &copy; Apex Friendship TSA</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   </body>
 
