--- a/index.html
+++ b/index.html
@@ -20,7 +20,22 @@
 
     <!-- Custom styles for this template -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
+<style>
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
 
+td, th {
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #99ccff;
+}
+</style>
   </head>
 
   <body>
@@ -103,8 +118,46 @@
       </div>
     </div>
 
-    <hr>
+<br>
+<br>
+<center><h3>Past Achievments</h3></center>
+<br>
+<br>
+<br>
+<br>
 
+<table>
+  <tr>
+    <th><center>Event</center></th>
+    <th><center>Position</center></th>
+  </tr>
+  <tr>
+   <td>Coming Soon</td>
+    <td>Coming Soon</td>
+  </tr>
+  <tr>
+   <td>Coming Soon</td>
+    <td>Coming Soon</td>
+  </tr>
+  <tr>
+   <td>Coming Soon</td>
+    <td>Coming Soon</td>
+  </tr>
+  <tr>
+    <td>Coming Soon</td>
+    <td>Coming Soon</td>
+  </tr>
+  <tr>
+   <td>Coming Soon</td>
+    <td>Coming Soon</td>
+
+  </tr>
+  <tr>
+    <td>Coming Soon</td>
+    <td>Coming Soon</td>
+
+  </tr>
+</table>
     <!-- Footer -->
       <footer>
             <p class="copyright text-muted">Copyright &copy; Apex Friendship TSA</p>
