--- a/jason.html
+++ b/jason.html
@@ -88,7 +88,7 @@
 
 <div class="parallax"></div>
  <footer>
- <center><a href="ai.html">BACK TO AI PAGE</a>
+ <center><a href="AI.html">BACK TO AI PAGE</a>
             <p class="copyright text-muted">Copyright &copy; Apex Friendship TSA</p>
           </div>
         </div>
