--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About</title>
+    <title><img src="img/logo.jpg">About</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -87,7 +87,7 @@ All bootstrap components and stylings are stored in bootstrap created content
 <br>
 <center><img src="img/bootstrap.png" width="130px"><center>
 <br>
-<center>COMMUNITY SERVICE/VOLUNTEER SERVICE:<center>
+<center><h2>COMMUNITY SERVICE/VOLUNTEER SERVICE:</h2><center>
 
 <br>
 <br>
@@ -95,13 +95,24 @@ Our TSA team helped volunteer for various different events and organizations, as
     </div>
     </center>
     </center>
+    <br>
+    <br>
     </div>
-    </civ>
-      <footer>
-            <p class="copyright text-muted">Copyright &copy; Apex Friendship TSA</p>
-          </div>
+    </div>
+    <div>
+              </div>
         </div>
       </div>
+      <br>
+      <br>
+     <center><h2>SOURCES:</h2></center>
+    <br><center><a href="https://futureoflife.org/background/benefits-risks-of-artificial-intelligence/">https://futureoflife.org/background/benefits-risks-of-artificial-intelligence/</a><br>
+    <a href=""http://robohub.org/artificial-intelligence-understanding-how-machines-learn/">http://robohub.org/artificial-intelligence-understanding-how-machines-learn/</a><br>
+    <a href"http://www.thehindu.com/sci-tech/technology/computing-at-the-speed-of-light/article18080358.ece">http://www.thehindu.com/sci-tech/technology/computing-at-the-speed-of-light/article18080358.ece</a><br></center>
+    </div>
+      <footer>
+            <p class="copyright text-muted">Copyright &copy; Apex Friendship TSA</p>
+
     </footer>
 
     <!-- Bootstrap core JavaScript -->
