--- a/cte_tech.html
+++ b/cte_tech.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>CTE and TECH Programs</title>
+    <title><img src="img/logo.jpg">CTE and TECH Programs</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
