--- a/jason.html
+++ b/jason.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Home</title>
+    <title>AI Home</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
 </head>
 
 <body>
- <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+ <nav class="navbar navbar-expand-lg navbar-light fixed" id="mainNav">
       <div class="container">
         <a class="navbar-brand" href="index.html">Apex Friendship High School TSA</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,20 +66,41 @@
       </div>
     </nav>
 
-<center><p>Scroll down for more info</p></center>
 
-<div class="parallax"></div>
-
-<div style="height:115px;background-color:white;font-size:15px">
-<center>This is the page for Jason and all his subclasses. Spending guides are below<center>
+<div class="parallax">
+<center><p>Scroll down for more info</p>
+<br>
+<br>
+  <img src="img/ja(1)son.png" width="880px">
+  </center>
+  <br>
 <br>
 <br>
 <br>
-<center>FULL: 30000$, 60 and 30 month plans<center>
 <br>
-<center>IVX: 15000$, 60 and 30 month plans<center>
 <br>
-<center>NIVX: 7000$ Full down and 30 month plans<center>
+</div>
+<div style="height:500px;background-color:white;font-size:15px">
+<br>
+<br>
+<br>
+<center><h2>SPENDING GUIDES</h2><center>
+<br>
+<br>
+<br>
+<br>
+<br>
+<center><h4>FULL</h4>
+<br>
+ (Includes 2 IVX and 1 NIVX Units, an easy to use modifiable adherence program and a dvd that has video lessons on proper usage of the unit(s)): 30000$, 60 and 30 month plans<center>
+<br>
+<center><h4>IVX</h4>
+<br>
+ (Includes 1 IVX Unit and a dvd that has video lessons on proper usage of the unit(s)) : 15000$, 60 and 30 month plans<center>
+<br>
+<center><h4>NIVX</h4>
+<br>
+ (Includes 1 NIVX Unit and a dvd that has video lessons on proper usage of the unit(s)): 7000$ Full down and 30 month plans<center>
 </div>
 
 <br>
