--- a/jason.html
+++ b/jason.html
@@ -40,9 +40,9 @@
 </head>
 
 <body>
- <nav class="navbar navbar-expand-lg navbar-light fixed" id="mainNav">
+ <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Apex Friendship High School TSA</a>
+        <a class="navbar-brand" href="index.html"><font color="#d1d1e0">Apex Friendship High School TSA</font></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Navigation
           <i class="fa fa-bars"></i>
@@ -65,7 +65,6 @@
         </div>
       </div>
     </nav>
-
 
 <div class="parallax">
 <center><p>Scroll down for more info</p>
