--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
            <br>
-<center>This page was made using a bootstrap framework from <a href="https://startbootstrap.com">startbootstrap.com.</a>
+<center>This page was made using a bootstrap framework from <a href="https://getbootstrap.com">bootstrap.</a>
 <br>
 <hr>
 <br>
