--- a/jason.html
+++ b/jason.html
@@ -25,14 +25,14 @@
 <style>
 .parallax {
     /* The image used */
-    background-image: url("img/ai2.jpg");
-
+    background-image: url("img/grey.jpg");
+margin-top: 0px;
     /* Set a specific height */
-    min-height: 500px; 
+
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
-    background-position: center;
+    background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -40,7 +40,8 @@
 </head>
 
 <body>
- <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+<div style="height:85px;background-color:black;font-size:15px"
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand" href="index.html"><font color="#d1d1e0">Apex Friendship High School TSA</font></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,12 +66,11 @@
         </div>
       </div>
     </nav>
+    </div>
 
-<div class="parallax">
-<center><p>Scroll down for more info</p>
-<br>
-<br>
-  <img src="img/ja(1)son.png" width="880px">
+<div class="parallax" >
+  <center>
+  <img src="img/ja(1)son.png" width="880px" style="padding-top: 200px;">
   </center>
   <br>
 <br>
