--- a/jason.html
+++ b/jason.html
@@ -43,7 +43,7 @@ margin-top: 0px;
 <div style="height:85px;background-color:black;font-size:15px"
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="index.html"><font color="#d1d1e0">Apex Friendship High School TSA</font></a>
+        <a class="navbar-brand" href="index.html"><font color="#d1d1e0">APEX FRIENDSHIP TSA</font></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Navigation
           <i class="fa fa-bars"></i>
