--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
-
+<link href="css/animate.css" rel="stylesheet">
   </head>
 
   <body>
@@ -57,7 +57,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="site-heading">
+            <div class="site-heading fadeIn animated">
               <h1>About</h1>
               <h2 class="subheading">Brief description of how we made this project</h2>
             </div>
