--- a/cte_tech.html
+++ b/cte_tech.html
@@ -20,7 +20,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
-
+    <link href="css/animate.css" rel="stylesheet">
   </head>
 
   <body>
@@ -57,10 +57,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="page-heading">
+            <div class="site-heading fadeIn animated">
               <h1>AFHS CTE & TECH CLASSES</h1>
-              <span class="subheading">Briefing of the AFHS CTE and Technological Classes.</span>
-            </div>
+              <h2 class="subheading">Briefing of the AFHS CTE and Technological Classes.</h2>
+              </div>
           </div>
         </div>
       </div>
