--- a/jason.html
+++ b/jason.html
@@ -19,7 +19,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
-
+    <link href="css/animate.css" rel="stylesheet">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
