--- a/AI.html
+++ b/AI.html
@@ -20,6 +20,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
 
   </head>
 
@@ -58,9 +59,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="page-heading">
+            <div class="page-heading fadeIn animated">
               <h1>Artificial Intelligence</h1>
-              <span class="subheading">Artificial Intelligence Page</span>
+              <h2 class="subheading">Artificial Intelligence Page</h2>
             </div>
           </div>
         </div>
@@ -69,7 +70,7 @@
 
     <hr>
 
-    <div class="container">
+    <div class="container bounceInLeft animated" style="animation-delay: 3.5s;">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
            <br>
