--- a/about.html
+++ b/about.html
@@ -70,6 +70,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
            <br>
+           <div class="zoomInDown animated" style="animation-delay: .6s;">
 <center>This page was made using a bootstrap framework from <a href="https://getbootstrap.com">bootstrap.</a>
 <br>
 <hr>
@@ -85,13 +86,16 @@ We used a bootstrap frameworked navbar and page linking.
 All bootstrap components and stylings are stored in bootstrap created content
 <br>
 <br>
-<center><img src="img/bootstrap.png" width="130px"><center>
+<center><img src="img/bootstrap.png" width="130px"></center>
 <br>
+</div>
+<div class="rollIn animated" style="animation-delay: 2.6s;"
 <center><h2>COMMUNITY SERVICE/VOLUNTEER SERVICE:</h2><center>
 
 <br>
 <br>
 Our TSA team helped volunteer for various different events and organizations, as well as them participating in such events. The AFHS TSA team got the opportunity to help run a local middle school robotic competition earlier this year. Two memebers of the team also participated in the Kramden community service program where they built and tested computers for less priviledged children.
+    </div>
     </div>
     </center>
     </center>
