--- a/jason.html
+++ b/jason.html
@@ -68,7 +68,7 @@ margin-top: 0px;
     </nav>
     </div>
 
-<div class="parallax" >
+<div class="parallax bounceInDown animated" >
   <center>
   <img src="img/ja(1)son.png" width="880px" style="padding-top: 200px;">
   </center>
