--- a/AI.html
+++ b/AI.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <title>Artificial Intelligence</title>
-
+<link rel="icon" href="img/logo.jpg">
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
