--- a/jason.html
+++ b/jason.html
@@ -8,6 +8,7 @@
     <meta name="author" content="">
 
     <title>AI Home</title>
+    <link rel="icon" href="img/logo.jpg">
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
