--- a/about.html
+++ b/about.html
@@ -105,13 +105,17 @@ Our TSA team helped volunteer for various different events and organizations, as
     </div>
     <div>
       
-    </div>
-    <center><a class="twitter-timeline" href="https://twitter.com/apexfriendship?ref_src=twsrc%5Etfw" height="600px" width="250px">Tweets by apexfriendship</a> </center><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
+      <div>
+        <img src="img/mullinsderek.jpg">Secondary TSA Advisor (Mr. Mullins)</img>
+        <img src="img/hollerwilliam.jpg">Primary TSA Advisor (Mr. Mullins)</img>
+    <center><a class="twitter-timeline" href="https://twitter.com/apexfriendship?ref_src=twsrc%5Etfw" height="600px" width="350px">Tweets by apexfriendship</a> </center><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
       </div>
       <br>
       <br>
-     <center><h3>SOURCES:</h3></center>
+    </div>
+    <center><h3>SOURCES:</h3></center>
     <br><center><a href="https://futureoflife.org/background/benefits-risks-of-artificial-intelligence/">https://futureoflife.org/background/benefits-risks-of-artificial-intelligence/</a><br>
     <a href="http://robohub.org/artificial-intelligence-understanding-how-machines-learn/">http://robohub.org/artificial-intelligence-understanding-how-machines-learn/</a><br>
     <a href="http://www.thehindu.com/sci-tech/technology/computing-at-the-speed-of-light/article18080358.ece">http://www.thehindu.com/sci-tech/technology/computing-at-the-speed-of-light/article18080358.ece</a><br></center>
