fonts and colors

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <title>About</title>
-<link rel="icon" href="img/logo.jpg">
+<link rel="icon" href="img/logo.png">
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -89,8 +89,8 @@ All bootstrap components and stylings are stored in bootstrap created content
 <center><img src="img/bootstrap.png" width="130px"></center>
 <br>
 </div>
-<div class="rollIn animated" style="animation-delay: 2.6s;"
-<center><h2>COMMUNITY SERVICE/VOLUNTEER SERVICE:</h2><center>
+<div class="rollIn animated" style="animation-delay: 2.6s;">
+<center><h3>COMMUNITY SERVICE/VOLUNTEER SERVICE:</h3><center>
 
 <br>
 <br>
@@ -109,10 +109,10 @@ Our TSA team helped volunteer for various different events and organizations, as
       </div>
       <br>
       <br>
-     <center><h2>SOURCES:</h2></center>
+     <center><h3>SOURCES:</h3></center>
     <br><center><a href="https://futureoflife.org/background/benefits-risks-of-artificial-intelligence/">https://futureoflife.org/background/benefits-risks-of-artificial-intelligence/</a><br>
-    <a href=""http://robohub.org/artificial-intelligence-understanding-how-machines-learn/">http://robohub.org/artificial-intelligence-understanding-how-machines-learn/</a><br>
-    <a href"http://www.thehindu.com/sci-tech/technology/computing-at-the-speed-of-light/article18080358.ece">http://www.thehindu.com/sci-tech/technology/computing-at-the-speed-of-light/article18080358.ece</a><br></center>
+    <a href="http://robohub.org/artificial-intelligence-understanding-how-machines-learn/">http://robohub.org/artificial-intelligence-understanding-how-machines-learn/</a><br>
+    <a href="http://www.thehindu.com/sci-tech/technology/computing-at-the-speed-of-light/article18080358.ece">http://www.thehindu.com/sci-tech/technology/computing-at-the-speed-of-light/article18080358.ece</a><br></center>
     </div>
       <footer>
             <p class="copyright text-muted">Copyright &copy; Apex Friendship TSA</p>
