--- a/index.html
+++ b/index.html
@@ -174,7 +174,10 @@ tr:nth-child(even) {
 
     <!-- Custom scripts for this template -->
     <script src="js/bootstrapframe.js"></script>
-
+<script src="js/animate-scroll.js"></script>
+<script type="text/javascript">
+  $(document).animateScroll();  
+</script>
   </body>
 
 </html>
