working and useful animations

--- a/AI.html
+++ b/AI.html
@@ -70,11 +70,11 @@
 
     <hr>
 
-    <div class="container bounceInLeft animated" style="animation-delay: 3.5s;">
+    <div class="container bounceInLeft wow" >
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
            <br>
-<center><a href="https;//http://www.tsaweb.org/sites/default/files/2018%20High%20School%20Webmaster%20Design%20Brief.pdf"><p>DESIGN BRIEF</p></a>
+<center><a href="http://www.tsaweb.org/sites/default/files/2018%20High%20School%20Webmaster%20Design%20Brief.pdf"><p>DESIGN BRIEF</p></a>
 <hr>
 <br>
 <p> Welcome to the AFHS AI Company homepage, we have successfully created one of the first, and most advanced robots that can adhere to your actions and soon become a friend. This robot, Jason, has a complex learning algorithm, paired with many different functional parts to replicate human action.<p>
@@ -109,7 +109,10 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/bootstrapframe.js"></script>
-
+ <script src="js/wow.js"></script>
+              <script>
+              new WOW().init();
+              </script>
   </body>
 
 </html>
