--- a/cte_tech.html
+++ b/cte_tech.html
@@ -142,7 +142,10 @@ Our school offers a variety of computer software classes that includes but are n
 
     <!-- Custom scripts for this template -->
     <script src="js/bootstrapframe.js"></script>
-
+ <script src="js/wow.js"></script>
+              <script>
+              new WOW().init();
+              </script>
   </body>
 
 </html>
