--- a/jason.html
+++ b/jason.html
@@ -69,7 +69,7 @@ margin-top: 0px;
     </nav>
     </div>
 
-<div class="parallax bounceInDown animated" style="animation-delay: .75s;" >
+<div class="parallax bounceInDown wow" >
   <center>
   <img src="img/ja(1)son.png" width="880px" style="padding-top: 200px;">
   </center>
@@ -117,6 +117,9 @@ margin-top: 0px;
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+ <script src="js/wow.js"></script>
+              <script>
+              new WOW().init();
+              </script>
 </body>
 </html>
