--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
            <br>
-           <div class="zoomInDown wow">
+           <div class="zoomIn wow">
 <center>This page was made using a bootstrap framework from <a href="https://getbootstrap.com">bootstrap.</a>
 <br>
 <hr>
@@ -92,7 +92,7 @@ All bootstrap components and stylings are stored in bootstrap created content
 <center><img src="img/bootstrap.png" width="130px"></center>
 <br>
 </div>
-<div class="rollIn wow" >
+<div class="zoomIn wow" >
 <center><h3>COMMUNITY SERVICE/VOLUNTEER SERVICE:</h3><center>
 
 <br>
