--- a/cte_tech.html
+++ b/cte_tech.html
@@ -76,6 +76,8 @@
 				 <br>
 			<br>
 			<br>
+      
+<div class="fadeInLeft wow">
 <a href="https://www.wcpss.net/domain/3967"><font color ="red">From our CTE page:</font></a>
 <br>
 <br>
@@ -85,11 +87,11 @@
 "Today's economy demands a better educated workforce more than ever before.  Career and Technical Education (CTE) is an elective program and an integral part of Apex Friendship High School.  CTE provides students with the academic rigor, technical knowledge, employability skills, and real-world experiences needed to pursue postsecondary training and higher education for high-skill, high-demand, and highly successful careers.
 
 CTE brings education and business together so that students gain real world understanding of their skills and are equipped for career success. Nearly all CTE educators report working with business and industry leaders in their programs in a range of capacities, from advisory panels to classroom visits to offering internships and job shadowing opportunities to students. The business community helps validate the CTE curriculum and donates supplies and equipment. This relationship helps educators ground their curriculums in the real needs of real businesses, leading students to obtain skills that will be highly valuable in the job market."
-
+</div>
 <br>
 <br>
 <hr>
-
+<div class="fadeInLeft wow">
 <font color="black">ACADEMY OF ENGINEERING</font>
 
 <br>
@@ -102,20 +104,23 @@ This program includes specialized classes in their student's schedule
 			<img src="img/aoe.jpg">
 <br>
 <br>
+</div>
 <hr>
 <br>
 <br>
+<div class="fadeInLeft wow">
 <font color="black">MICROSOFT CLUSTER CLASSES</font>
 <br>
 <br>
 
 The classes that are based off of microsoft products in our school are "Word & Powerpoint" and "Excel & Access", which both come in the honors variety if the student is up for the challenge. These classes are great for setting you up for success in college and the business world. These are some of the only classes that have a structured learning purpose based on the student's needs, and molds the curriculum to the newer version of the microsoft products.
-
+</div>
 <br>
 <br>
 <hr>
 <br>
 <br>
+<div class="fadeInLeft wow">
 <font color="black">ADOBE, DATABASE, CODING AND SCI VIS CLASSES</font>
 
 <br>
@@ -124,6 +129,7 @@ The classes that are based off of microsoft products in our school are "Word & P
 Our school offers a variety of computer software classes that includes but are not limited to these softwares: Adobe Illustrator, Adobe Photoshop, Adobe InDesign, AutoDesk Inventor, AutoDesk 3DS MAX, Microsoft VisualStudio, and various products from SAS.
 		  </div>
       </div>
+    </div>
     </div>
 
     <hr>
