coloring and animations

--- a/AI.html
+++ b/AI.html
@@ -70,14 +70,20 @@
 
     <hr>
 
-    <div class="container bounceInLeft wow" >
+    <div class="container zoomIn wow" >
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
            <br>
 <center><a href="http://www.tsaweb.org/sites/default/files/2018%20High%20School%20Webmaster%20Design%20Brief.pdf"><p>DESIGN BRIEF</p></a>
-<hr>
+<hr></center>
+<p class="fadeInRight wow" style="animation-delay: .7s; background-color: #ccdef9; padding: 20px; float: right; font-family: comic;"> What can Jason do? Jason can become your friend, do your tasks, aid in any mental or physical endeavor, and of course, make your life a whole lot easier.</p>
+<br></div>
+<center><p> Welcome to the AFHS AI Company homepage, we have successfully created one of the first, and most advanced robots that can adhere to your actions and soon become a friend. This robot, Jason, has a complex learning algorithm, paired with many different functional parts to replicate human action.<p>
 <br>
-<p> Welcome to the AFHS AI Company homepage, we have successfully created one of the first, and most advanced robots that can adhere to your actions and soon become a friend. This robot, Jason, has a complex learning algorithm, paired with many different functional parts to replicate human action.<p>
+<br>
+<p class="fadeInRight wow" style="animation-delay: .7s; background-color: #ccdef9; padding: 20px; float: right; font-family: comic; padding-bottom: 20px" width="100px"> Jason can be beneficial to the elderly, disabled, and can help aid in crucial human behavioral research for future advancements for AFHS AI CO &copy;.</p>
+<br>
+<br>
 <br>
 <br>
 <p> Jason has subclasses of robots too, if the price is too much or the actions are out of needed range. Check out our spending plan and pricing guide for all the versions of Jason, you can choose between a full down payment, 15 month, 30 month or 60 month spending plan. (SHOWN BELOW)</center>
