--- a/about.html
+++ b/about.html
@@ -21,6 +21,22 @@
     <!-- Custom styles for this template -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
 <link href="css/animate.css" rel="stylesheet">
+<style>
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    text-align: center;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #f7c0c0;
+}
+</style>
   </head>
 
   <body>
@@ -121,7 +137,59 @@ Our TSA team helped volunteer for various different events and organizations, as
       </div>
       <br>
       <br>
+
+
+
+
+
+
+
+
+
+
+<table>
+  <tr>
+    <th><center>Team Members</center></th>
+    <th><center>Role</center></th>
+     <th><center>Other Events</center></th>
+  </tr>
+  <tr>
+   <td>Srikant Vasudevan</td>
+    <td>Team Leader/Main Coder</td>
+    <td>Software Dev</td>
+  </tr>
+  <tr>
+   <td>Srinath Vasudevan</td>
+    <td>Idea Creator/File Manager</td>
+    <td>Software Dev/Coding</td>
+  </tr>
+  <tr>
+   <td>Hasan Hamdani</td>
+    <td>Co-File Manager</td>
+    <td>Software Dev/Coding</td>
+  </tr>
+  <tr>
+    <td>Jason Long</td>
+    <td>Secondary Team Leader</td>
+    <td>Software Dev</td>
+  </tr>
+</table>
+
+
+
+
+
+
+
+
+
+
+
+ <br>
+    <br>
+    <br>
     </div>
+
     <center><h3>SOURCES:</h3></center>
     <br><center><a href="https://futureoflife.org/background/benefits-risks-of-artificial-intelligence/">https://futureoflife.org/background/benefits-risks-of-artificial-intelligence/</a><br>
     <a href="http://robohub.org/artificial-intelligence-understanding-how-machines-learn/">http://robohub.org/artificial-intelligence-understanding-how-machines-learn/</a><br>
