--- a/index.html
+++ b/index.html
@@ -144,16 +144,21 @@ tr:nth-child(even) {
 <br>
 
 
-<div id="carouselExampleFade" class="carousel slide carousel-fade bounceIn wow" data-ride="carousel" style="padding-top:50px;padding-bottom:80px;padding-left:50px;padding-right:50px; animation-delay: .5s;">
+
+
+
+
+
+<div id="carouselExampleFade" class="carousel slide carousel-fade bounceIn wow" data-ride="carousel" style="padding-top:75px;padding-bottom:100px;padding-left:125px;padding-right:125px; animation-delay: .5s;">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="img/banner.png" alt="First slide" width="90px" height="400px">
+      <img class="d-block w-100" src="img/banner.png" alt="Srikant V" width="90px" height="400px"><center><h1><font color="black" size="5px">Srikant V</font></h1></center></img>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/gears_and_tech.jpg" alt="Second slide" width="90px" height="400px">
+      <img class="d-block w-100" src="img/gears_and_tech.jpg" alt="Srinath V" width="90px" height="400px"><center><h1><font color="black" size="5px">Srinath V</font></h1></center></img>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/wood.jpg" alt="Third slide" width="90px" height="400px">
+      <img class="d-block w-100" src="img/wood.jpg" alt="Hasan H" width="90px" height="400px"><center><h1><font color="black" size="5px">Hasan H</font></h1></center></img>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -165,6 +170,10 @@ tr:nth-child(even) {
     <span class="sr-only">Next</span>
   </a>
 </div>
+
+
+
+
 
 <center><h3>Past Achievments</h3></center>
 <br>
