fixed twitter bug 'cache unloading'

--- a/about.html
+++ b/about.html
@@ -125,14 +125,14 @@ Our TSA team helped volunteer for various different events and organizations, as
     </div>
     <div>
       
-      <div class="wow zoomIn" style="padding-top: 150px;">
+      <div class="wow zoomIn" style="padding-top: 150px; padding-bottom: 50px;">
         <img src="img/mullinsderek.jpg" style="float:left; padding-left: 50px;" width="200px"><div style="float:left; padding-left: 10px; font-family: arial; font-size: 15px">Secondary TSA Advisor (Mr. Mullins)</div></img>
         <img src="img/hollerwill.jpg" style="float:right; padding-right: 50px;" width="200px"><div style="float:right; padding-right: 10px; font-family: arial; font-size: 15px">Primary TSA Advisor (Mr. Holler)</div></img>
         <br>
         <br>
         <br>
         <br>
-    <center><a class="twitter-timeline" href="https://twitter.com/apexfriendship?ref_src=twsrc%5Etfw" height="600px" width="350px">Tweets by apexfriendship</a> </center><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <center><a class="twitter-timeline" href="https://twitter.com/apexfriendship?ref_src=twsrc%5Etfw" height="600px" width="350px" >Tweets by apexfriendship</a> </center><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
       </div>
       <br>
