--- a/jason.html
+++ b/jason.html
@@ -37,6 +37,18 @@ margin-top: 0px;
     background-repeat: no-repeat;
     background-size: cover;
 }
+.parallaxof {
+    /* The image used */
+    background-image: url("img/grey.jpg");
+margin-top: 0px;
+    /* Set a specific height */
+
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
 </style>
 </head>
 
@@ -70,18 +82,11 @@ margin-top: 0px;
     </div>
 
 <div class="parallax bounceInDown wow" >
-  <center>
-  <img src="img/ja(1)son.png" width="880px" style="padding-top: 200px;">
-  </center>
-  <br>
-<br>
-<br>
-<br>
-<br>
-<br>
+<div style="background-color: blue;">
+  <img src="img/jasonmod.jpg" width="500px" style="padding-top: 200px; float:right;padding-right:100px">  <h1 style="padding-top: 300px;padding-left: 100px;float:left; color: black; font-size:20px; max-width:550px;">Jason is equipped with motion sensors, neurological databases that are similar to those of IBM and Google, a realistic voicebox that shows the sound wave itself, retractable wheels, and a turning wheel coupled with a front facing screen for on-bot optimization.</h1></img>
 </div>
-<div style="height:500px;background-color:white;font-size:15px">
-<br>
+</div>
+<div class="parallaxof bckgrnd" style="height:auto;;font-size:15px;padding-bottom:400px;padding-top:700px; background-color:white;">
 <br>
 <br>
 <center><h2>SPENDING GUIDES</h2><center>
@@ -92,22 +97,18 @@ margin-top: 0px;
 <br>
 <center><h4>FULL</h4>
 <br>
- (Includes 2 IVX and 1 NIVX Units, an easy to use modifiable adherence program and a dvd that has video lessons on proper usage of the unit(s)): 30000$, 60 and 30 month plans<center>
+ (Includes 2 IVX and 1 NIVX Units, an easy to use modifiable adherence program and a dvd that has video lessons on proper usage of the unit(s)): <bold>$30000</bold>, 60 and 30 month plans<center>
 <br>
 <center><h4>IVX</h4>
 <br>
- (Includes 1 IVX Unit and a dvd that has video lessons on proper usage of the unit(s)) : 15000$, 60 and 30 month plans<center>
+ (Includes 1 IVX Unit and a dvd that has video lessons on proper usage of the unit(s)) : <bold>$15000</bold>, 60 and 30 month plans<center>
 <br>
 <center><h4>NIVX</h4>
 <br>
- (Includes 1 NIVX Unit and a dvd that has video lessons on proper usage of the unit(s)): 7000$ Full down and 30 month plans<center>
+ (Includes 1 NIVX Unit and a dvd that has video lessons on proper usage of the unit(s)): <bold>$7000</bold> Full down and 30 month plans<center>
 </div>
 
-<br>
-<br>
-<br>
-
-<div class="parallax"></div>
+<div class="parallaxof"></div>
  <footer>
             <p class="copyright text-muted">Copyright &copy; Apex Friendship TSA</p>
           </div>
