--- a/AI.html
+++ b/AI.html
@@ -54,7 +54,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/ai.jpg')">
+    <header class="masthead" style="background-image: url('img/ai.jpg'); background-attachment: fixed;">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
