--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@ tr:nth-child(even) {
       </div>
     </nav>
 
-<header class="masthead" style="background-image: url('img/project working.jpg')">
+<header class="masthead" style="background-image: url('img/project working.jpg'); background-attachment: fixed;">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
