--- a/cte_tech.html
+++ b/cte_tech.html
@@ -52,7 +52,7 @@
       </div>
     </nav>
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/banner.png')">
+    <header class="masthead" style="background-image: url('img/banner.png'); background-attachment: fixed;">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
