--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ tr:nth-child(even) {
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/gears_and_tech.jpg')">
+    <header class="masthead" style="background-image: url('img/gears_and_tech.jpg'); background-attachment: fixed;">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -146,20 +146,20 @@ tr:nth-child(even) {
 
 
 
-<div id="carouselExampleFade" class="carousel slide carousel-fade bounceIn wow" data-ride="carousel" style="padding-top:75px;padding-bottom:100px;padding-left:125px;padding-right:125px; animation-delay: .5s;">
+<div id="carouselExampleFade" class="carousel slide carousel-fade bounceIn wow" data-ride="carousel" style="padding-top:75px;padding-bottom:75px;padding-left:250px;padding-right:250px; animation-delay: .5s;">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="img/banner.png" alt="Srikant V" width="90px" height="400px"><center><h1><font color="black" size="5px">Srikant V</font></h1></center></img>
+      <img class="d-block w-100" src="img/srikant.jpg" alt="Srikant V" width="90px" height="400px"><center><h1><font color="black" size="5px">Srikant V</font></h1></center></img>
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/gears_and_tech.jpg" alt="Srinath V" width="90px" height="400px"><center><h1><font color="black" size="5px">Srinath V</font></h1></center></img>
+      <img class="d-block w-100" src="img/srinath.jpg" alt="Srinath V" width="90px" height="400px"><center><h1><font color="black" size="5px">Srinath V</font></h1></center></img>
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev" style="background-color:black">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next" style="background-color:black;">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
