--- a/jason.html
+++ b/jason.html
@@ -1,15 +1,16 @@
-<html>
-<head>
- 
+
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>AI Home</title>
-    <link rel="icon" href="img/logo.png">
-
+    <title>Jason(ROBOT)</title>
+<link rel="icon" href="img/logo.png">
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -17,46 +18,60 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
+    <link href="css/animate.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    
 <style>
-.parallax {
-    /* The image used */
-    background-image: url("img/grey.jpg");
-margin-top: 0px;
-    /* Set a specific height */
-
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: cover;
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
 }
-.parallaxof {
-    /* The image used */
-    background-image: url("img/grey.jpg");
-margin-top: 0px;
-    /* Set a specific height */
 
+td, th {
+    text-align: left;
+    padding: 8px;
+}
 
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: cover;
+tr:nth-child(even) {
+    background-color: #99ccff;
+}
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+ 
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
 </style>
-</head>
+  </head>
 
-<body>
-<div style="height:85px;background-color:black;font-size:15px"
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="index.html"><font color="#d1d1e0">APEX FRIENDSHIP TSA</font></a>
+        <a class="navbar-brand" href="index.html"><font color="white">APEX FRIENDSHIP TSA</font></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Navigation
           <i class="fa fa-bars"></i>
@@ -79,17 +94,36 @@ margin-top: 0px;
         </div>
       </div>
     </nav>
-    </div>
 
-<div class="parallax bounceInDown wow" >
-<div style="background-color: blue;">
+    <!-- Page Header -->
+    <header class="masthead" style="background-image: url('img/ai2.jpg'); background-attachment: fixed;">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+            <div class="site-heading fadeIn animated">
+              <h1>JASON</h1>
+              <h2 class="subheading">The friendly, useful, robot.</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+<br>
+<br>
+<br>
+<br>
+
+
+<div class="bounceInDown wow" >
+<div>
   <img src="img/jasonmod.jpg" width="500px" style="padding-top: 200px; float:right;padding-right:100px">  <h1 style="padding-top: 300px;padding-left: 100px;float:left; color: black; font-size:20px; max-width:550px;">Jason is equipped with motion sensors, neurological databases that are similar to those of IBM and Google, a realistic voicebox that shows the sound wave itself, retractable wheels, and a turning wheel coupled with a front facing screen for on-bot optimization.</h1></img>
 </div>
 </div>
-<div class="parallaxof bckgrnd" style="height:auto;;font-size:15px;padding-bottom:400px;padding-top:700px; background-color:white;">
+<div style="height:auto;;font-size:15px;padding-bottom:400px;padding-top:700px;">
 <br>
 <br>
-<center><h2>SPENDING GUIDES</h2><center>
+<center><h2 style="padding: 50px; background-color: white">SPENDING GUIDES</h2><center>
 <br>
 <br>
 <br>
@@ -97,15 +131,15 @@ margin-top: 0px;
 <br>
 <center><h4>FULL</h4>
 <br>
- (Includes 2 IVX and 1 NIVX Units, an easy to use modifiable adherence program and a dvd that has video lessons on proper usage of the unit(s)): <bold>$30000</bold>, 60 and 30 month plans<center>
+ (Includes 2 IVX and 1 NIVX Units, an easy to use modifiable adherence program and a dvd that has video lessons on proper usage of the unit(s)): <u><strong>$30,000</strong></u>, 60 and 30 month plans<center>
 <br>
 <center><h4>IVX</h4>
 <br>
- (Includes 1 IVX Unit and a dvd that has video lessons on proper usage of the unit(s)) : <bold>$15000</bold>, 60 and 30 month plans<center>
+ (Includes 1 IVX Unit and a dvd that has video lessons on proper usage of the unit(s)) : <u><strong>$15,000</strong></u>, 60 and 30 month plans<center>
 <br>
 <center><h4>NIVX</h4>
 <br>
- (Includes 1 NIVX Unit and a dvd that has video lessons on proper usage of the unit(s)): <bold>$7000</bold> Full down and 30 month plans<center>
+ (Includes 1 NIVX Unit and a dvd that has video lessons on proper usage of the unit(s)): <u><strong>$7,000</strong></u> Full down and 30 month plans<center>
 </div>
 
 <div class="parallaxof"></div>
@@ -124,3 +158,4 @@ margin-top: 0px;
               </script>
 </body>
 </html>
+
