--- a/index.html
+++ b/index.html
@@ -148,18 +148,18 @@ tr:nth-child(even) {
 
 <div id="carouselExampleFade" class="carousel slide carousel-fade bounceIn wow" data-ride="carousel" style="padding-top:75px;padding-bottom:75px;padding-left:250px;padding-right:250px; animation-delay: .5s;">
   <div class="carousel-inner">
-    <div class="carousel-item active">
+    <div class="carousel-item active" style="max-width: 800px; position: center;">
       <img class="d-block w-100" src="img/srikant.jpg" alt="Srikant V" width="90px" height="400px"><center><h1><font color="black" size="5px">Srikant V</font></h1></center></img>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="img/srinath.jpg" alt="Srinath V" width="90px" height="400px"><center><h1><font color="black" size="5px">Srinath V</font></h1></center></img>
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev" style="background-color:black">
+  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next" style="background-color:black;">
+  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
@@ -181,16 +181,16 @@ tr:nth-child(even) {
     <th><center>Position</center></th>
   </tr>
   <tr>
-   <td>Coming Soon</td>
-    <td>Coming Soon</td>
+   <td>Software Development (2018 NCTSA States)</td>
+    <td>2nd</td>
   </tr>
   <tr>
-   <td>Coming Soon</td>
-    <td>Coming Soon</td>
+   <td>Webmaster (2018 NCTSA States)</td>
+    <td>3rd</td>
   </tr>
   <tr>
-   <td>Coming Soon</td>
-    <td>Coming Soon</td>
+   <td>SciVis (2018 NCTSA States)</td>
+    <td>3rd</td>
   </tr>
   <tr>
     <td>Coming Soon</td>
