--- a/jason.html
+++ b/jason.html
@@ -22,48 +22,6 @@
     <!-- Custom styles for this template -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
     
-<style>
-table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-}
-
-td, th {
-    text-align: left;
-    padding: 8px;
-}
-
-tr:nth-child(even) {
-    background-color: #99ccff;
-}
-/* Tooltip container */
-.tooltip {
-    position: relative;
-    display: inline-block;
-    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
-}
-
-/* Tooltip text */
-.tooltip .tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    padding: 5px 0;
-    border-radius: 6px;
- 
-    /* Position the tooltip text - see examples below! */
-    position: absolute;
-    z-index: 1;
-}
-
-/* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
-    visibility: visible;
-}
-</style>
   </head>
 
   <body>
@@ -117,7 +75,7 @@ tr:nth-child(even) {
 
 <div class="bounceInDown wow" >
 <div>
-  <img src="img/jasonmod.jpg" width="500px" style="padding-top: 200px; float:right;padding-right:100px">  <h1 style="padding-top: 300px;padding-left: 100px;float:left; color: black; font-size:20px; max-width:550px;">Jason is equipped with motion sensors, neurological databases that are similar to those of IBM and Google, a realistic voicebox that shows the sound wave itself, retractable wheels, and a turning wheel coupled with a front facing screen for on-bot optimization.</h1></img>
+  <img src="/img/jason.GIF" width="500px" style="padding-right: 50px; padding-top: 200px;" >  <h1 style="padding-top: 300px;padding-left: 100px;float:left; color: black; font-size:20px; max-width:550px;">Jason is equipped with motion sensors, neurological databases that are similar to those of IBM and Google, a realistic voicebox that shows the sound wave itself, retractable wheels, and a turning wheel coupled with a front facing screen for on-bot optimization.</h1></img>
 </div>
 </div>
 <div style="height:auto;;font-size:15px;padding-bottom:400px;padding-top:700px;">
