--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@ tr:nth-child(even) {
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+  <br>
+  <br>
+  <a href="about.html#table">More about our Webmaster members</a>
 </div>
 
 
