--- a/jason.html
+++ b/jason.html
@@ -21,24 +21,21 @@
     <link href="css/animate.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+     <link rel="stylesheet" href="css/materialize.css">
     <style>
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
-    border: 3px solid black;
 }
 
 td, th {
     text-align: left;
     padding: 20px;
-        border: 3px solid black;
         max-width: 100px;
 }
 
 tr:nth-child(even) {
-     border: 3px solid black;
     background-color: #99ccff;
 }
 table#t01 {
@@ -87,17 +84,21 @@ table#t01 {
 <table id="t01">
 <tr>
 <th>
-<h1 style="padding:150px;float:left; color: black; font-size:20px; max-width:550px; background-color:grey;">Jason is equipped with motion sensors, neurological databases that are similar to those of IBM and Google, a realistic voicebox that shows the sound wave itself, retractable wheels, and a turning wheel coupled with a front facing screen for on-bot optimization.</h1>
+<h1 style="padding:150px;float:left; color: black; font-size:20px; max-width:550px; background-color:grey;">Jason is a smart robot that is equipped with motion sensors, neurological databases that are similar to those of IBM and Google, a realistic voicebox that shows the sound wave itself, retractable wheels, and a turning wheel coupled with a front facing screen for on-bot optimization.</h1>
   
 </th>
 <th>
-    <img src="../img/jason.GIF" width="500px" style="padding-right: 50px; padding-top: 200px;">
+    <img src="img/jason.GIF" width="500px" style="float:right;">
     </th>
     </tr>
     </table>
 </div>
 </div>
-<center><h1 style="color:black;padding:100px;border:2px;">Commercial, Educational and Recreational Uses</h1></center>
+<br>
+<br>
+<br>
+
+<center><h1 style="color:black;padding:85px;border:2px;">Commercial, Educational and Recreational Uses</h1></center>
 
 
 
@@ -111,8 +112,7 @@ table#t01 {
           <p>Jason can be used in a variety of different industrial professions from working in factories to helping in architecture. Its adaptive databases can make it an invaluable asset to any work you set it to do.</p>
         </div>
         <div class="card-action">
-          <a href="#">This is a link</a>
-          <a href="#">This is a link</a>
+          <a href="taid.html#ind">Active Technological Aid</a>
         </div>
       </div>
     </div>
@@ -126,8 +126,7 @@ table#t01 {
           <p>Unlike any human, Jason doesn't get tired while doing tasks, and (depending on which model you purchase) has a large enough battery that charging will not be a hastle. Jason can tend to any needs, and can provide formidable care.</p>
         </div>
         <div class="card-action">
-          <a href="#">This is a link</a>
-          <a href="#">This is a link</a>
+          <a href="taid.html#care">Active Technological Aid</a>
         </div>
       </div>
     </div>
@@ -141,8 +140,7 @@ table#t01 {
           <p>Jason can also be one of the most fun bots you have ever had. It can act like a human, a friend or a peer. Its realistic voice and proper adherence programs, Jason is the best all round Active Learning &trade; bot that ApexFriendship AI has to offer.</p>
         </div>
         <div class="card-action">
-          <a href="#">This is a link</a>
-          <a href="#">This is a link</a>
+          <a href="taid.html#fun">Active Technological Aid</a>
         </div>
       </div>
     </div>
@@ -170,6 +168,7 @@ table#t01 {
 <br>
 <br>
 <br>
+<hr>
 <div style="padding-right:20px;padding-left:20px;">
 <table>
 
